added all content

--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
                 <div class="player-area">
 
                     <!-- youtube video -->
-                    <iframe width="560" height="315"
-                        src="https://www.youtube-nocookie.com/embed/HSsqzzuGTPo?controls=0&amp;start=13"
-                        title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/HSsqzzuGTPo?controls=0&amp;start=13" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
 
@@ -141,7 +139,7 @@
                         </div>
                         <div class="channel-info">
                             <div class="user-short-info">
-                                <div class="user-img"><img src="" alt=""></div>
+                                <div class="user-img"><img src="images/channel.jpg" alt="channel"></div>
                                 <div class="user-name">
                                     <p>Benjamin Lili</p>
                                     <span>November 19, 2022</span>
