left side update

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             </div>
                             <div class="comment-area">
                                 <form action="#">
-                                    <textarea name="" id="" rows="4"></textarea>
+                                    <input name="" id="" placeholder="Write your cmment here"/>
                                     <button type="submit"><img src="images/send.svg" alt="">Submit</button>
                                 </form>
                             </div>
@@ -204,13 +204,13 @@
                                     </div>
                                     <div class="replay-group">
                                         <div class="replay-single">
-                                            <div class="comment-user">
-                                                <img src="images/channel.jpg" alt="Kate Pray">
-                                                <div class="user-name">Kate Pray</div>
-                                                <div class="time"><img src="images/calendar.svg" alt="">03 Aug,2022
+                                            <div class="comment-user replay-user">
+                                                <img src="images/replay-user.jpg" alt="Kate Pray">
+                                                <div class="user-name">Joshua</div>
+                                                <div class="time"><img src="images/time-circle-o.svg" alt="">03 Aug,2022
                                                 </div>
                                             </div>
-                                            <div class="comment-text">
+                                            <div class="comment-text replay-text">
                                                 <p>It is a long established fact that a reader will be distracted by the
                                                     readable content of a page when looking a</p>
                                             </div>
@@ -220,7 +220,7 @@
                                 <div class="comment-single">
                                     <div class="comment-user">
                                         <img src="images/channel.jpg" alt="Kate Pray">
-                                        <div class="user-name">Kate Pray</div>
+                                        <div class="user-name">Jhon Smith</div>
                                         <div class="time"><img src="images/calendar.svg" alt="">03 Aug,2022</div>
                                     </div>
                                     <div class="comment-text">
@@ -247,27 +247,12 @@
                                                     fill="#292D32" />
                                             </svg>1.5K</button>
                                     </div>
-                                    <div class="replay-group">
-                                        <div class="replay-single">
-                                            <div class="comment-user">
-                                                <img src="images/channel.jpg" alt="Kate Pray">
-                                                <div class="user-name">Kate Pray</div>
-                                                <div class="time"><img src="images/calendar.svg" alt="">03 Aug,2022
-                                                </div>
-                                            </div>
-                                            <div class="comment-text">
-                                                <p>It is a long established fact that a reader will be distracted by the
-                                                    readable content of a page when looking a</p>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="playlist">
-                        <label class="playlist-title">
-                            <h2>Autoplay</h2><input type="checkbox">
+                        <label class="playlist-title">Autoplay<input type="checkbox">
                         </label>
                         <ul class="playlist-items">
                             <li class="playlist-item">
