left side update

--- a/index.html
+++ b/index.html
@@ -252,8 +252,7 @@
                         </div>
                     </div>
                     <div class="playlist">
-                        <label class="playlist-title">Autoplay<input type="checkbox">
-                        </label>
+                        <label class="playlist-title">Autoplay<input type="checkbox" checked><span></span></label>
                         <ul class="playlist-items">
                             <li class="playlist-item">
                                 <div class="list-tn"><img src="images/video-tn.jpg" alt=""></div>
