--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netlify</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <!-- Bootstrap  v5.2.3 CSS -->
-    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     <!-- Theme CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -33,7 +31,11 @@
                                 <span>ckipchirir@nhif.gov.ke</span>
                             </div>
                         </div>
-                        <div class="toggle"><button></button></div>
+                        <div class="toggle"><button><svg width="5" height="15" viewBox="0 0 5 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2.69089 7.91745C3.10259 7.91745 3.43634 7.58335 3.43634 7.17122C3.43634 6.75909 3.10259 6.42499 2.69089 6.42499C2.27919 6.42499 1.94543 6.75909 1.94543 7.17122C1.94543 7.58335 2.27919 7.91745 2.69089 7.91745Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M2.69092 2.69382C3.10262 2.69382 3.43637 2.35972 3.43637 1.94759C3.43637 1.53545 3.10262 1.20135 2.69092 1.20135C2.27922 1.20135 1.94547 1.53545 1.94547 1.94759C1.94547 2.35972 2.27922 2.69382 2.69092 2.69382Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M2.69089 13.1411C3.10259 13.1411 3.43634 12.807 3.43634 12.3949C3.43634 11.9827 3.10259 11.6486 2.69089 11.6486C2.27919 11.6486 1.94543 11.9827 1.94543 12.3949C1.94543 12.807 2.27919 13.1411 2.69089 13.1411Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg></button></div>
                     </div>
                 </div>
             </div>
@@ -65,7 +67,7 @@
                             </div>
                             <div class="search-sugg">
                                 <div class="search-sugg-option">
-                                    <p>search-sugg</p>
+                                    <p>Recent Search</p>
                                     <ul>
                                         <li><a href="#">Educational Videos</a></li>
                                         <li><a href="#">Grow Personality</a></li>
@@ -99,28 +101,59 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
 
+                        <div class="player-play"><button><svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20.6667 12.0142C20.6667 12.7513 20.4347 13.4913 19.9706 14.0839C19.8836 14.2001 19.4776 14.6792 19.1586 14.9911L18.9846 15.1612C16.5485 17.744 10.4873 21.6282 7.41323 22.8728C7.41323 22.9012 5.58617 23.6412 4.71615 23.6667H4.60014C3.2661 23.6667 2.01906 22.9324 1.38104 21.7416C1.03303 21.0867 0.714015 19.1871 0.685014 19.1616C0.424006 17.4577 0.25 14.8493 0.25 11.9858C0.25 8.9834 0.424006 6.25882 0.743016 4.58608C0.743016 4.55773 1.06203 3.02674 1.26503 2.51641C1.58404 1.78211 2.16406 1.15554 2.88909 0.758617C3.46911 0.477936 4.07813 0.333344 4.71615 0.333344C5.38317 0.36453 6.63021 0.786968 7.12322 0.985429C10.3713 2.2329 16.5775 6.31552 18.9556 8.81046C19.3616 9.20738 19.7966 9.69219 19.9126 9.80276C20.4057 10.4265 20.6667 11.192 20.6667 12.0142" fill="#0095FF"/>
+                            </svg></button></div>
+
                     <div class="player-elements">
+                        <!-- player progess bar -->
                         <div class="progess-bar"><span></span></div>
 
                         <div class="player-options">
                             <div class="timer">
-                                <span class="sound"></span>
-                                <span class="timer-up"></span>/<span class="timer-total"></span>
+                                <button class="sound"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12.55 20.59C11.76 20.59 10.89 20.31 10.02 19.76L7.1 17.93C6.9 17.81 6.67 17.74 6.44 17.74H5C2.58 17.74 1.25 16.41 1.25 13.99V9.99C1.25 7.57 2.58 6.24 5 6.24H6.43C6.66 6.24 6.89 6.17 7.09 6.05L10.01 4.22C11.47 3.31 12.89 3.14 14.01 3.76C15.13 4.38 15.74 5.67 15.74 7.4V16.57C15.74 18.29 15.12 19.59 14.01 20.21C13.57 20.47 13.07 20.59 12.55 20.59ZM5 7.75C3.42 7.75 2.75 8.42 2.75 10V14C2.75 15.58 3.42 16.25 5 16.25H6.43C6.95 16.25 7.45 16.39 7.89 16.67L10.81 18.5C11.77 19.1 12.68 19.26 13.29 18.92C13.9 18.58 14.25 17.73 14.25 16.6V7.41C14.25 6.27 13.9 5.42 13.29 5.09C12.68 4.75 11.77 4.9 10.81 5.51L7.88 7.33C7.45 7.61 6.94 7.75 6.43 7.75H5Z" fill="white"/>
+                                    <path d="M18 16.75C17.84 16.75 17.69 16.7 17.55 16.6C17.22 16.35 17.15 15.88 17.4 15.55C18.97 13.46 18.97 10.54 17.4 8.45C17.15 8.12 17.22 7.65 17.55 7.4C17.88 7.15 18.35 7.22 18.6 7.55C20.56 10.17 20.56 13.83 18.6 16.45C18.45 16.65 18.23 16.75 18 16.75Z" fill="white"/>
+                                    <path d="M19.83 19.25C19.67 19.25 19.52 19.2 19.38 19.1C19.05 18.85 18.98 18.38 19.23 18.05C21.9 14.49 21.9 9.51 19.23 5.95C18.98 5.62 19.05 5.15 19.38 4.9C19.71 4.65 20.18 4.72 20.43 5.05C23.5 9.14 23.5 14.86 20.43 18.95C20.29 19.15 20.06 19.25 19.83 19.25Z" fill="white"/>
+                                    </svg></button>
+                                <span class="timer-run">2:35</span>/<span class="timer-total">4:50</span>
                             </div>
-
+                            <!-- player controller -->
                             <div class="controller">
                                 <ul>
-                                    <li><button></button></li>
-                                    <li><button></button></li>
-                                    <li><button></button></li>
+                                    <li><button><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M17.6901 20.09C17.1201 20.09 16.5601 19.94 16.0401 19.64L7.75009 14.86C6.72009 14.26 6.1001 13.19 6.1001 12C6.1001 10.81 6.72009 9.74 7.75009 9.14L16.0401 4.35997C17.0701 3.75997 18.3001 3.75997 19.3401 4.35997C20.3801 4.95997 20.9901 6.01999 20.9901 7.21999V16.79C20.9901 17.98 20.3701 19.05 19.3401 19.65C18.8201 19.94 18.2601 20.09 17.6901 20.09ZM17.6901 5.40999C17.3801 5.40999 17.0701 5.48998 16.7901 5.64998L8.50009 10.43C7.94009 10.76 7.6001 11.34 7.6001 11.99C7.6001 12.64 7.94009 13.22 8.50009 13.55L16.7901 18.33C17.3501 18.66 18.0301 18.66 18.5901 18.33C19.1501 18 19.4901 17.42 19.4901 16.77V7.2C19.4901 6.55 19.1501 5.97 18.5901 5.64C18.3101 5.5 18.0001 5.40999 17.6901 5.40999Z" fill="white"/>
+                                        <path d="M3.75977 18.93C3.34977 18.93 3.00977 18.59 3.00977 18.18V5.82001C3.00977 5.41001 3.34977 5.07001 3.75977 5.07001C4.16977 5.07001 4.50977 5.41001 4.50977 5.82001V18.18C4.50977 18.59 4.16977 18.93 3.75977 18.93Z" fill="white"/>
+                                        </svg></button></li>
+                                    <li><button><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M8.64 21.75H5.01C3.15 21.75 2.25 20.89 2.25 19.11V4.89C2.25 3.11 3.15 2.25 5.01 2.25H8.64C10.5 2.25 11.4 3.11 11.4 4.89V19.11C11.4 20.89 10.5 21.75 8.64 21.75ZM5.01 3.75C3.93 3.75 3.75 4.02 3.75 4.89V19.11C3.75 19.98 3.92 20.25 5.01 20.25H8.64C9.72 20.25 9.9 19.98 9.9 19.11V4.89C9.9 4.02 9.73 3.75 8.64 3.75H5.01Z" fill="white"/>
+                                        <path d="M18.99 21.75H15.36C13.5 21.75 12.6 20.89 12.6 19.11V4.89C12.6 3.11 13.5 2.25 15.36 2.25H18.99C20.85 2.25 21.75 3.11 21.75 4.89V19.11C21.75 20.89 20.85 21.75 18.99 21.75ZM15.36 3.75C14.28 3.75 14.1 4.02 14.1 4.89V19.11C14.1 19.98 14.27 20.25 15.36 20.25H18.99C20.07 20.25 20.25 19.98 20.25 19.11V4.89C20.25 4.02 20.08 3.75 18.99 3.75H15.36Z" fill="white"/>
+                                        </svg></button></li>
+                                    <li><button><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M6.30975 20.09C5.73975 20.09 5.17976 19.94 4.65976 19.64C3.61976 19.04 3.00977 17.98 3.00977 16.78V7.21001C3.00977 6.02001 3.62976 4.95002 4.65976 4.35002C5.69976 3.75002 6.92975 3.75002 7.95975 4.35002L16.2498 9.13002C17.2798 9.73002 17.8997 10.8 17.8997 11.99C17.8997 13.18 17.2798 14.25 16.2498 14.85L7.95975 19.63C7.43975 19.94 6.87975 20.09 6.30975 20.09ZM6.30975 5.41002C5.99975 5.41002 5.68976 5.49001 5.40976 5.65001C4.84976 5.98001 4.50977 6.56001 4.50977 7.21001V16.78C4.50977 17.43 4.84976 18.01 5.40976 18.34C5.96976 18.66 6.64975 18.67 7.20975 18.34L15.4998 13.56C16.0598 13.23 16.3997 12.65 16.3997 12C16.3997 11.35 16.0598 10.77 15.4998 10.44L7.20975 5.66002C6.92975 5.50002 6.61975 5.41002 6.30975 5.41002Z" fill="white"/>
+                                        <path d="M20.2402 18.9301C19.8302 18.9301 19.4902 18.5901 19.4902 18.1801V5.82007C19.4902 5.41007 19.8302 5.07007 20.2402 5.07007C20.6502 5.07007 20.9902 5.41007 20.9902 5.82007V18.1801C20.9902 18.5901 20.6602 18.9301 20.2402 18.9301Z" fill="white"/>
+                                        </svg></button></li>
                                 </ul>
                             </div>
-
+                            <!-- player settings -->
                             <div class="settings">
                                 <ul>
-                                    <li><button></button></li>
-                                    <li><button></button></li>
-                                    <li><button></button></li>
+                                    <li><button><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M15 22.75H14C13.59 22.75 13.25 22.41 13.25 22C13.25 21.59 13.59 21.25 14 21.25H15C19.61 21.25 21.25 19.61 21.25 15V9C21.25 4.39 19.61 2.75 15 2.75H9C4.39 2.75 2.75 4.39 2.75 9V9.98C2.75 10.39 2.41 10.73 2 10.73C1.59 10.73 1.25 10.39 1.25 9.98V9C1.25 3.57 3.57 1.25 9 1.25H15C20.43 1.25 22.75 3.57 22.75 9V15C22.75 20.43 20.43 22.75 15 22.75Z" fill="white"/>
+                                        <path d="M13 11.75C12.81 11.75 12.62 11.68 12.47 11.53C12.18 11.24 12.18 10.76 12.47 10.47L16.21 6.72H14C13.59 6.72 13.25 6.38 13.25 5.97C13.25 5.56 13.58 5.22 14 5.22H18.01C18.31 5.22 18.59 5.4 18.7 5.68C18.82 5.96 18.75 6.28 18.54 6.5L13.53 11.53C13.38 11.68 13.19 11.75 13 11.75Z" fill="white"/>
+                                        <path d="M18.01 10.74C17.6 10.74 17.26 10.4 17.26 9.99V5.97C17.26 5.56 17.6 5.22 18.01 5.22C18.42 5.22 18.76 5.56 18.76 5.97V9.98C18.76 10.4 18.42 10.74 18.01 10.74Z" fill="white"/>
+                                        <path d="M7.85 22.75H5.15C2.49 22.75 1.25 21.51 1.25 18.85V16.15C1.25 13.49 2.49 12.25 5.15 12.25H7.85C10.51 12.25 11.75 13.49 11.75 16.15V18.85C11.75 21.51 10.51 22.75 7.85 22.75ZM5.15 13.75C3.31 13.75 2.75 14.31 2.75 16.15V18.85C2.75 20.69 3.31 21.25 5.15 21.25H7.85C9.69 21.25 10.25 20.69 10.25 18.85V16.15C10.25 14.31 9.69 13.75 7.85 13.75H5.15Z" fill="white"/>
+                                        </svg></button></li>
+                                    <li><button><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M15 22.75H9C3.57 22.75 1.25 20.43 1.25 15V9C1.25 3.57 3.57 1.25 9 1.25H15C20.43 1.25 22.75 3.57 22.75 9V15C22.75 20.43 20.43 22.75 15 22.75ZM9 2.75C4.39 2.75 2.75 4.39 2.75 9V15C2.75 19.61 4.39 21.25 9 21.25H15C19.61 21.25 21.25 19.61 21.25 15V9C21.25 4.39 19.61 2.75 15 2.75H9Z" fill="white"/>
+                                        <path d="M16.4 19.25H12.6C10.68 19.25 9.75 18.32 9.75 16.4V14.6C9.75 12.68 10.68 11.75 12.6 11.75H16.4C18.32 11.75 19.25 12.68 19.25 14.6V16.4C19.25 18.32 18.32 19.25 16.4 19.25ZM12.6 13.25C11.52 13.25 11.25 13.52 11.25 14.6V16.4C11.25 17.48 11.52 17.75 12.6 17.75H16.4C17.48 17.75 17.75 17.48 17.75 16.4V14.6C17.75 13.52 17.48 13.25 16.4 13.25H12.6Z" fill="white"/>
+                                        </svg></button></li>
+                                    <li><button><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2 9.75C1.59 9.75 1.25 9.41 1.25 9V6.5C1.25 3.61 3.61 1.25 6.5 1.25H9C9.41 1.25 9.75 1.59 9.75 2C9.75 2.41 9.41 2.75 9 2.75H6.5C4.43 2.75 2.75 4.43 2.75 6.5V9C2.75 9.41 2.41 9.75 2 9.75Z" fill="white"/>
+                                        <path d="M22 9.75C21.59 9.75 21.25 9.41 21.25 9V6.5C21.25 4.43 19.57 2.75 17.5 2.75H15C14.59 2.75 14.25 2.41 14.25 2C14.25 1.59 14.59 1.25 15 1.25H17.5C20.39 1.25 22.75 3.61 22.75 6.5V9C22.75 9.41 22.41 9.75 22 9.75Z" fill="white"/>
+                                        <path d="M17.5 22.75H16C15.59 22.75 15.25 22.41 15.25 22C15.25 21.59 15.59 21.25 16 21.25H17.5C19.57 21.25 21.25 19.57 21.25 17.5V16C21.25 15.59 21.59 15.25 22 15.25C22.41 15.25 22.75 15.59 22.75 16V17.5C22.75 20.39 20.39 22.75 17.5 22.75Z" fill="white"/>
+                                        <path d="M9 22.75H6.5C3.61 22.75 1.25 20.39 1.25 17.5V15C1.25 14.59 1.59 14.25 2 14.25C2.41 14.25 2.75 14.59 2.75 15V17.5C2.75 19.57 4.43 21.25 6.5 21.25H9C9.41 21.25 9.75 21.59 9.75 22C9.75 22.41 9.41 22.75 9 22.75Z" fill="white"/>
+                                        </svg></button></li>
                                 </ul>
                             </div>
                         </div>
@@ -136,7 +169,7 @@
                     <div class="content-details">
                         <div class="title">
                             <h1>How not to take things personally?</h1>
-                            <div class="time">4:50</div>
+                            <div class="time"><img src="images/time-circle-o.svg" alt="">4:50</div>
                         </div>
                         <div class="channel-info">
                             <div class="user-short-info">
@@ -147,7 +180,10 @@
                                 </div>
                             </div>
                             <div class="like-btn">
-                                <button>1.5K</button>
+                                <button><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M10.8533 14.7333H8.32C7.94667 14.7333 7.13333 14.62 6.7 14.1867L4.68 12.6267L5.29333 11.8333L7.36 13.4333C7.52667 13.5933 7.94667 13.7267 8.32 13.7267H10.8533C11.4533 13.7267 12.1 13.2467 12.2333 12.7067L13.8467 7.80667C13.9533 7.51333 13.9333 7.24667 13.7933 7.05333C13.6467 6.84667 13.38 6.72667 13.0533 6.72667H10.3867C10.04 6.72667 9.72 6.58 9.5 6.32666C9.27333 6.06667 9.17333 5.72 9.22667 5.36L9.56 3.22C9.64 2.84667 9.38667 2.42667 9.02667 2.30667C8.7 2.18667 8.28 2.36 8.13333 2.57333L5.4 6.64L4.57333 6.08667L7.30667 2.02C7.72667 1.39333 8.64667 1.09333 9.36667 1.36667C10.2 1.64 10.7333 2.56 10.5467 3.41333L10.22 5.51333C10.2133 5.56 10.2133 5.62667 10.26 5.68C10.2933 5.71333 10.34 5.73333 10.3933 5.73333H13.06C13.7133 5.73333 14.28 6.00667 14.6133 6.48C14.94 6.94 15.0067 7.54667 14.7933 8.13333L13.2 12.9867C12.9533 13.9533 11.9267 14.7333 10.8533 14.7333Z" fill="#292D32"/>
+                                    <path d="M3.58667 14H2.92C1.68667 14 1.08667 13.42 1.08667 12.2333V5.7C1.08667 4.51333 1.68667 3.93333 2.92 3.93333H3.58667C4.82 3.93333 5.42 4.51333 5.42 5.7V12.2333C5.42 13.42 4.82 14 3.58667 14ZM2.92 4.93333C2.19334 4.93333 2.08667 5.10667 2.08667 5.7V12.2333C2.08667 12.8267 2.19334 13 2.92 13H3.58667C4.31334 13 4.42 12.8267 4.42 12.2333V5.7C4.42 5.10667 4.31334 4.93333 3.58667 4.93333H2.92Z" fill="#292D32"/>
+                                    </svg>1.5K</button>
                             </div>
                         </div>
                         <div class="video-description">
@@ -156,7 +192,9 @@
                                 a page when looking at its layout. The point of using Lorem Ipsum is that it has a
                                 more-or-less normal distribution of letters, as opposed to using 'Content here, content
                                 here', making it look like readable English.</p>
-                            <button></button>
+                            <button><svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9.08335 0.958328L5.00002 5.04166L0.916687 0.958328" stroke="#0095FF" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg></button>
                         </div>
 
                         <!-- video comment area -->
@@ -344,19 +382,7 @@
     </main>
 
 
-
-    <footer></footer>
-
-
-
-
-
-
-
-
     <!-- script -->
-    <script src="js/jquery-3.6.1.min.js"></script>
-    <!-- <script src="js/bootstrap.min.js"></script> -->
     <script src="js/app.js"></script>
 </body>
 
