fixes css issues

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netlify</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <!-- Theme CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="site-logo"><a href="#"><img src="images/logo.svg" alt="Netlify"></a></div>
+                    <div class="site-logo"><a href="index.html"><img src="images/logo.svg" alt="Netlify"></a></div>
                 </div>
                 <div class="col-md-6">
                     <div class="header-content">
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="site-logo"><a href="#"><img src="images/logo.svg" alt="Netlify"></a></div>
+                    <div class="site-logo"><a href="index.html"><img src="images/logo.svg" alt="Netlify"></a></div>
                 </div>
                 <div class="col-md-4">
                     <div class="header-content">
@@ -89,6 +89,8 @@
                                     <input id="search" type="text" placeholder="Search here">
                                 </form>
                             </div>
+
+                            <!-- Search dropdown -->
                             <div class="search-sugg">
                                 <div class="search-sugg-option">
                                     <p>Recent Search</p>
@@ -108,6 +110,8 @@
                                     </ul>
                                 </div>
                             </div>
+                            <!-- Search dropdown end -->
+
                         </div>
                     </div>
                 </div>
@@ -146,7 +150,8 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
 
-                        <div class="player-play"><button><svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <!-- play button -->
+                    <div class="player-play"><button><svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M20.6667 12.0142C20.6667 12.7513 20.4347 13.4913 19.9706 14.0839C19.8836 14.2001 19.4776 14.6792 19.1586 14.9911L18.9846 15.1612C16.5485 17.744 10.4873 21.6282 7.41323 22.8728C7.41323 22.9012 5.58617 23.6412 4.71615 23.6667H4.60014C3.2661 23.6667 2.01906 22.9324 1.38104 21.7416C1.03303 21.0867 0.714015 19.1871 0.685014 19.1616C0.424006 17.4577 0.25 14.8493 0.25 11.9858C0.25 8.9834 0.424006 6.25882 0.743016 4.58608C0.743016 4.55773 1.06203 3.02674 1.26503 2.51641C1.58404 1.78211 2.16406 1.15554 2.88909 0.758617C3.46911 0.477936 4.07813 0.333344 4.71615 0.333344C5.38317 0.36453 6.63021 0.786968 7.12322 0.985429C10.3713 2.2329 16.5775 6.31552 18.9556 8.81046C19.3616 9.20738 19.7966 9.69219 19.9126 9.80276C20.4057 10.4265 20.6667 11.192 20.6667 12.0142" fill="#0095FF"/>
                             </svg></button></div>
 
@@ -154,6 +159,7 @@
                         <!-- player progess bar -->
                         <div class="progess-bar"><span></span></div>
 
+                        <!-- player sound option -->
                         <div class="player-options">
                             <div class="timer">
                                 <button class="sound"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -163,6 +169,7 @@
                                     </svg></button>
                                 <span class="timer-run">2:35</span>/<span class="timer-total">4:50</span>
                             </div>
+
                             <!-- player controller -->
                             <div class="controller">
                                 <ul>
@@ -180,6 +187,7 @@
                                         </svg></button></li>
                                 </ul>
                             </div>
+
                             <!-- player settings -->
                             <div class="settings">
                                 <ul>
@@ -201,7 +209,10 @@
                                         </svg></button></li>
                                 </ul>
                             </div>
+                            <!--  -->
+
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -212,10 +223,15 @@
             <div class="container">
                 <div class="row">
                     <div class="content-details">
+
+                        <!-- video title -->
                         <div class="title">
                             <h1>How not to take things personally?</h1>
                             <div class="time"><img src="images/time-circle-o.svg" alt="">4:50</div>
                         </div>
+                        <!-- video title end -->
+
+                        <!-- video channel info -->
                         <div class="channel-info">
                             <div class="user-short-info">
                                 <div class="user-img"><img src="images/channel.jpg" alt="channel"></div>
@@ -231,6 +247,9 @@
                                     </svg>1.5K</button>
                             </div>
                         </div>
+                        <!-- video channel info end -->
+
+                        <!-- video description -->
                         <div class="video-description">
                             <h2>Description</h2>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
@@ -241,6 +260,7 @@
                                 <path d="M9.08335 0.958328L5.00002 5.04166L0.916687 0.958328" stroke="#0095FF" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg></button>
                         </div>
+                        <!-- video description end -->
 
                         <!-- video comment area -->
                         <div class="video-comment-box">
@@ -248,13 +268,19 @@
                                 <div class="icon"><img src="images/chat.svg" alt="chat"></div>
                                 <div class="text">2,250 Comments</div>
                             </div>
+
+                            <!-- Submit comment field -->
                             <div class="comment-area">
                                 <form action="#">
                                     <input name="" id="" placeholder="Write your cmment here"/>
                                     <button type="submit"><img src="images/send.svg" alt="">Submit</button>
                                 </form>
                             </div>
+                            <!-- Submit comment field end -->
+
                             <div class="comment-group">
+
+                                <!-- single comment with replay -->
                                 <div class="comment-single">
                                     <div class="comment-user">
                                         <img src="images/channel.jpg" alt="Kate Pray">
@@ -286,6 +312,8 @@
                                             </svg>1.5K</button>
                                     </div>
                                     <div class="replay-group">
+
+                                        <!-- replay for comment -->
                                         <div class="replay-single">
                                             <div class="comment-user replay-user">
                                                 <img src="images/replay-user.jpg" alt="Kate Pray">
@@ -298,8 +326,13 @@
                                                     readable content of a page when looking a</p>
                                             </div>
                                         </div>
+                                        <!--  -->
+
                                     </div>
                                 </div>
+                                <!-- single comment with replay end -->
+
+                                <!-- single comment without replay -->
                                 <div class="comment-single">
                                     <div class="comment-user">
                                         <img src="images/channel.jpg" alt="Kate Pray">
@@ -331,11 +364,18 @@
                                             </svg>1.5K</button>
                                     </div>
                                 </div>
+                                <!-- single comment without replay end -->
+
                             </div>
                         </div>
                     </div>
                     <div class="playlist">
+
+                        <!-- autoplay button is here -->
                         <label class="playlist-title playlist-title-md">Autoplay<input type="checkbox" checked><span></span></label>
+                        <!--  -->
+
+                        <!-- play list items -->
                         <ul class="playlist-items">
                             <li class="playlist-item">
                                 <div class="list-tn"><img src="images/video-tn.jpg" alt=""></div>
@@ -420,6 +460,7 @@
                                 </div>
                             </li>
                         </ul>
+                        <!-- play list items end -->
 
                         <!-- video comment area for mobile -->
                         <div class="video-comment-box-sm">
@@ -428,12 +469,14 @@
                                     <div class="icon"><img src="images/chat.svg" alt="chat"></div>
                                     <div class="text">2,250 Comments</div>
                                 </div>
+
                                 <div class="comment-area">
                                     <form action="#">
                                         <input name="" id="" placeholder="Write your cmment here"/>
-                                        <button type="submit"><img src="images/send.svg" alt="">Submit</button>
+                                        <button type="submit"><img src="images/send.svg" alt=""></button>
                                     </form>
                                 </div>
+
                                 <div class="comment-group">
                                     <div class="comment-single">
                                         <div class="comment-user">
@@ -465,6 +508,7 @@
                                                         fill="#292D32" />
                                                 </svg>1.5K</button>
                                         </div>
+
                                         <div class="replay-group">
                                             <div class="replay-single">
                                                 <div class="comment-user replay-user">
@@ -480,6 +524,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="comment-single">
                                         <div class="comment-user">
                                             <img src="images/channel.jpg" alt="Kate Pray">
@@ -511,14 +556,20 @@
                                                 </svg>1.5K</button>
                                         </div>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
+                        <!-- video comment area for mobile end -->
+
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+
+    <footer></footer>
 
 
     <!-- script -->
