fixes css issues

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <div class="search-box">
                                 <form action="#">
                                     <label for="search"></label>
-                                    <input id="search" type="text" placeholder="Search here">
+                                    <input id="search" type="text" placeholder="Search here" autocomplete="off">
                                 </form>
                             </div>
 
