--- a/index.html
+++ b/index.html
@@ -252,11 +252,15 @@
                         <!-- video description -->
                         <div class="video-description">
                             <h2>Description</h2>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
-                                a page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                                more-or-less normal distribution of letters, as opposed to using 'Content here, content
-                                here', making it look like readable English.</p>
-                            <button><svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <p id="videoDescription">It is a long established fact that a reader will be distracted by
+                                the readable content of a page when looking at its layout. The point of using Lorem
+                                Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+                                'Content here, content here', making it look like readable English. It is a long
+                                established fact that a reader will be distracted by the readable content of a page when
+                                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                                normal distribution of letters, as opposed to using 'Content here, content here', making
+                                it look like readable English.</p>
+                            <button onclick="vdiscripToggle()"><svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M9.08335 0.958328L5.00002 5.04166L0.916687 0.958328" stroke="#0095FF" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg></button>
                         </div>
