--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                             <li class="playlist-item">
                                 <div class="list-tn"><img src="images/video-tn.jpg" alt=""></div>
                                 <div class="video-summary">
-                                    <h3>Reading minds hrough boday language ...</h3>
+                                    <h3><a href="#">Reading minds hrough boday language ...</a></h3>
                                     <div class="chanel-summary">
                                         <img src="images/user.jpg" alt="">
                                         <p>Jhonn Smith</p>
@@ -401,7 +401,7 @@
                             <li class="playlist-item">
                                 <div class="list-tn"><img src="images/video-tn-2.jpg" alt=""></div>
                                 <div class="video-summary">
-                                    <h3>Reading minds hrough boday language ...</h3>
+                                    <h3><a href="#">How business ideas are born | Aya Jaff</a></h3>
                                     <div class="chanel-summary">
                                         <img src="images/user.jpg" alt="">
                                         <p>Jhonn Smith</p>
@@ -418,7 +418,7 @@
                             <li class="playlist-item">
                                 <div class="list-tn"><img src="images/video-tn-3.jpg" alt=""></div>
                                 <div class="video-summary">
-                                    <h3>Reading minds hrough boday language ...</h3>
+                                    <h3><a href="#">How to start your own business without investors...</a></h3>
                                     <div class="chanel-summary">
                                         <img src="images/user.jpg" alt="">
                                         <p>Jhonn Smith</p>
@@ -435,7 +435,7 @@
                             <li class="playlist-item">
                                 <div class="list-tn"><img src="images/video-tn-4.jpg" alt=""></div>
                                 <div class="video-summary">
-                                    <h3>Reading minds hrough boday language ...</h3>
+                                    <h3><a href="#">Business Storytelling Made Easy | Kelly Parker...</a></h3>
                                     <div class="chanel-summary">
                                         <img src="images/user.jpg" alt="">
                                         <p>Jhonn Smith</p>
@@ -452,7 +452,7 @@
                             <li class="playlist-item">
                                 <div class="list-tn"><img src="images/video-tn-5.jpg" alt=""></div>
                                 <div class="video-summary">
-                                    <h3>Reading minds hrough boday language ...</h3>
+                                    <h3><a href="#">Reading minds hrough boday language</a></h3>
                                     <div class="chanel-summary">
                                         <img src="images/user.jpg" alt="">
                                         <p>Jhonn Smith</p>
